Another bug related to click on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ body {
   margin: 0;
   font-family: 'Inter', 'Helvetica Neue', sans-serif;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 
   button {
     letter-spacing: 0.02em;
